@@ -4,6 +4,7 @@ Revision history for perl distribution Convos
  - Avoid hearing yourself locally through video chat
  - Fix accepting calls in private conversations
  - Fix rendering of main menu on small screens
+ - Fix making the chat input field stand out on small screens
 
 4.08 2020-05-23T15:32:00+0800
  - Add EXPERIMENTAL video support #204
